<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>

	<groupId>picky.engine</groupId>
	<artifactId>picky-engine</artifactId>
	<packaging>jar</packaging>

	<name>PickyEngine</name>
	<description>picky engine</description>
	<url>http://picky.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<encoding>UTF-8</encoding>
		<java.version>1.8</java.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	
	<parent>
		<groupId>picky</groupId>
		<artifactId>picky</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	
	<dependencies>
		
	</dependencies>

	<build>
		<defaultGoal>clean package</defaultGoal>
		
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
			</plugin>
		</plugins>
	</build>
</project>
